post mentor review, updated modal to centre text. Updated buttons in modal to add more spacing between buttons. Updated flash message to educe the size of the text. Fixed spelling error on add car page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,6 +84,9 @@ main {
 .red_buttom:hover{
     background-color: #e53935 !important ;
 }
+.confirmation_red_buttom{
+    margin-right: 10px !important;
+}
 .confirmation_red_buttom:hover{
     background-color: #e53935 !important ;
 }
